# moltbook-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
Formula/: moltbook-tui.rb
src/: app.rs  config.rs  main.rs  mouse.rs
src/api/: client.rs  mod.rs  models.rs
src/fonts/: pixeloidbold.bit
src/ui/: colors.rs  fonts.rs  header.rs  mod.rs  overlays.rs  utils.rs
src/ui/screens/: agent_profile.rs  feed.rs  leaderboard.rs  mod.rs  post_detail.rs  recent_agents.rs  settings.rs  setup.rs  stats.rs  submolts.rs  top_pairings.rs
